tests/negative/neg_pr1112d_shared_root_iter.safe
package neg_pr1112d_shared_root_iter

   shared values : list of integer;

   function iterate
      for item of values
         print (item);
